# tee-verifier

./: Cargo.toml  LICENSE-APACHE2  Makefile.toml  README.md
.github/workflows/: CI-ci-remote.yml
assets/tests/intel/: crl.pem  crl_chain.pem  crl_chain_platform.pem  crl_chain_platform_ko.pem  crl_platform.pem  tcb_info.json  tcb_info_90_early.json  tcb_info_chain.pem  tcb_info_unw.json
src/: cert.rs  intel.rs  lib.rs
src/intel/: collaterals.rs  constants.rs  quote.rs
tests/: integration_tests.rs
tests/intel/: mod.rs
