[package]
version = "0.1.0"
name = "tee-verifier"
authors = ["Horizen Labs <admin@horizenlabs.io>"]
repository = "https://github.com/zkVerify/tee-verifier"
homepage = "https://horizenlabs.io"
keywords = ["cryptography", "elliptic-curves", "pairing", "zk-SNARKs"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE2"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.42", default-features = false }
asn1_der = { version = "0.7.6", default-features = false, features = ["native_types"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
hex-literal = { version = "0.4.1", default-features = false }
sha2 = { version = "0.10.9", default-features = false }
serde = { version = "1.0.228", default-features = false, features = ["derive", "alloc"] }
serde-json-core = { version = "0.6.0", default-features = false, features = ["heapless"] }
p256 = { version = "0.13.2", default-features = false, features = ["ecdsa", "alloc"] }
pem = { version = "3.0.6", default-features = false }
spki = { version = "0.7.3", default-features = false }
x509-verify = { version = "0.4.8", default-features = false, features = [
  "x509",
  "p256",
  "k256",
  "ed25519",
  "p384",
  "p521",
  "sha2",
] }

[dev-dependencies]
rstest = { version = "0.19.0", default-features = false }
assert_ok = { version = "1.0.2" }

[features]
default = ["std"]
std = []
